--- a/jsp-servlets/pom.xml
+++ b/jsp-servlets/pom.xml
@@ -5,9 +5,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>Servlets-JSP</artifactId>
+    <artifactId>jsp-servlets</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>JavaEEHelloWorld</name>
+    <name>jsp-servlets</name>
     <packaging>war</packaging>
 
     <properties>
@@ -18,18 +18,6 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>jakarta.enterprise</groupId>
-            <artifactId>jakarta.enterprise.cdi-api</artifactId>
-            <version>3.0.0</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.ws.rs</groupId>
-            <artifactId>jakarta.ws.rs-api</artifactId>
-            <version>3.0.0</version>
-            <scope>provided</scope>
-        </dependency>
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
