--- a/jsp-servlets/src/main/webapp/WEB-INF/web.xml
+++ b/jsp-servlets/src/main/webapp/WEB-INF/web.xml
@@ -4,25 +4,25 @@
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
 
-    <servlet>
-        <servlet-name>helloServlet</servlet-name>
-        <servlet-class>com.example.jspservlets.HelloServlet</servlet-class>
+<!--    <servlet>-->
+<!--        <servlet-name>helloServlet</servlet-name>-->
+<!--        <servlet-class>com.example.jspservlets.HelloServlet</servlet-class>-->
 
-        <init-param>
-            <param-name>key1</param-name>
-            <param-value>value3</param-value>
-        </init-param>
+<!--        <init-param>-->
+<!--            <param-name>key1</param-name>-->
+<!--            <param-value>value3</param-value>-->
+<!--        </init-param>-->
 
-    </servlet>
+<!--    </servlet>-->
 
-    <context-param>
-        <param-name>key1</param-name>
-        <param-value>val1</param-value>
-    </context-param>
+<!--    <context-param>-->
+<!--        <param-name>key1</param-name>-->
+<!--        <param-value>val1</param-value>-->
+<!--    </context-param>-->
 
-    <context-param>
-        <param-name>key2</param-name>
-        <param-value>val2</param-value>
-    </context-param>
+<!--    <context-param>-->
+<!--        <param-name>key2</param-name>-->
+<!--        <param-value>val2</param-value>-->
+<!--    </context-param>-->
 
 </web-app>
