--- a/spring-jdbc/src/main/resources/application.properties
+++ b/spring-jdbc/src/main/resources/application.properties
@@ -1,5 +1,11 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.show-sql=true
+domain.datasource.type=MYSQL
+spring.jpa.hibernate.ddl-auto=none
+domain.datasource.driver-class=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/<>
+spring.datasource.username=<>
+spring.datasource.password=<>
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#spring.h2.console.enabled=true
+#spring.jpa.defer-datasource-initialization=true
+#spring.jpa.show-sql=true
 #logging.level.root=debug
