--- a/spring-course-with-jpa-hibernate/src/main/resources/application.properties
+++ b/spring-course-with-jpa-hibernate/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 domain.datasource.type=MYSQL
 spring.jpa.hibernate.ddl-auto=update
 domain.datasource.driver-class=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/jpahibernate
-spring.datasource.username=user1
-spring.datasource.password=Password@1
+spring.datasource.url=jdbc:mysql://localhost:3306/<>
+spring.datasource.username=<>
+spring.datasource.password=<>
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.sql.init.mode=always
 #Turn Statistics on
