--- a/spring-cloud/gateway/src/main/resources/application.properties
+++ b/spring-cloud/gateway/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 spring.application.name=gateway
 
-server.port=8095
+server.port=8081
 
-spring.cloud.consul.host=127.0.0.1
-spring.cloud.consul.port=8500
-spring.cloud.gateway.discovery.locater.enabled=true
-spring.cloud.gateway.discovery.locater.lower-case-service-id:true
+#spring.cloud.consul.host=127.0.0.1
+#spring.cloud.consul.port=8500
+#spring.cloud.gateway.discovery.locater.enabled=true
+#spring.cloud.gateway.discovery.locater.lower-case-service-id:true
 
+
+domain.datasource.type=MYSQL
+spring.jpa.hibernate.ddl-auto=update
+domain.datasource.driver-class=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/completeblogapp
+spring.datasource.username=root
+spring.datasource.password=Kaustubh1
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=true
+logging.level.root=ERROR
