jwt, jwe inner working, symmetric/asymmetric encryptions, cloud info, todo-integrate nginx & consul, grants in oauth2 revised

--- a/spring-cloud/shopping-service/src/main/resources/application.properties
+++ b/spring-cloud/shopping-service/src/main/resources/application.properties
@@ -1,11 +1,4 @@
 spring.application.name=shopping-service
 server.port=9090
-
-# Spring Cloud Consul Configuration
-spring.cloud.consul.host=127.0.0.1
-spring.cloud.consul.port=8500
-spring.cloud.consul.discovery.service-name=shopping-service
-
-spring.cloud.consul.discovery.enabled=true
-spring.cloud.consul.discovery.register=true
-spring.cloud.consul.discovery.healthCheckPath=/actuator/health
+eureka.client.service-url.defaultzone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address:true
