--- a/spring-cloud/payment-service/src/main/resources/application.properties
+++ b/spring-cloud/payment-service/src/main/resources/application.properties
@@ -1,11 +1,5 @@
 spring.application.name=payment-service
 server.port=9100
 
-# Spring Cloud Consul Configuration
-spring.cloud.consul.host=127.0.0.1
-spring.cloud.consul.port=8500
-spring.cloud.consul.discovery.service-name=payment-service
-spring.cloud.consul.discovery.enabled=true
-spring.cloud.consul.discovery.register=true
-spring.cloud.consul.discovery.healthCheckPath=/actuator/health
-#consul agent -server -bootstrap-expect=3 -bind=<server-ip>
+eureka.client.service-url.defaultzone=http://localhost:8761/eureka/
+eureka.instance.prefer-ip-address:true
